[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenuHard.gd" type="Script" id=1]
[ext_resource path="res://MainMenu/OnOffStart.png" type="Texture" id=2]
[ext_resource path="res://MainMenu/OnOffDiffEasy.png" type="Texture" id=3]
[ext_resource path="res://MainMenu/MultiMenuLights.png" type="Texture" id=4]
[ext_resource path="res://MainMenu/MenuButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://MainMenu/Title.tres" type="DynamicFont" id=6]
[ext_resource path="res://MainMenu/WalkerStand.png" type="Texture" id=7]
[ext_resource path="res://MainMenu/Label.tscn" type="PackedScene" id=8]
[ext_resource path="res://MainMenu/WalkerWalk.png" type="Texture" id=9]
[ext_resource path="res://Sounds/terrific-lights-background-music.ogg" type="AudioStream" id=10]
[ext_resource path="res://UI/ScoreDisplay.tscn" type="PackedScene" id=11]

[node name="MainMenuEasy" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 970.469, 502.186 )
texture = ExtResource( 4 )

[node name="FirstPlayer" type="Node2D" parent="."]

[node name="Walking" type="Sprite" parent="FirstPlayer"]
position = Vector2( 522.909, 352.102 )
scale = Vector2( 0.860158, 0.880135 )
texture = ExtResource( 9 )
hframes = 2

[node name="Standing" type="Sprite" parent="FirstPlayer"]
position = Vector2( 821.821, 351.353 )
scale = Vector2( 0.865152, 0.845175 )
texture = ExtResource( 7 )
hframes = 2

[node name="FirstPlayer2" type="Node2D" parent="."]

[node name="Walking" type="Sprite" parent="FirstPlayer2"]
position = Vector2( 1119.24, 355.099 )
scale = Vector2( 0.860158, 0.880135 )
texture = ExtResource( 9 )
hframes = 2

[node name="Standing" type="Sprite" parent="FirstPlayer2"]
position = Vector2( 1419.65, 357.346 )
scale = Vector2( 0.865152, 0.845175 )
texture = ExtResource( 7 )
hframes = 2

[node name="FirstPlayer3" type="Node2D" parent="."]

[node name="Walking" type="Sprite" parent="FirstPlayer3"]
position = Vector2( 521.411, 653.262 )
scale = Vector2( 0.860158, 0.880135 )
texture = ExtResource( 9 )
hframes = 2

[node name="Standing" type="Sprite" parent="FirstPlayer3"]
position = Vector2( 818.825, 655.51 )
scale = Vector2( 0.865152, 0.845175 )
texture = ExtResource( 7 )
hframes = 2

[node name="FirstPlayer4" type="Node2D" parent="."]

[node name="Walking" type="Sprite" parent="FirstPlayer4"]
position = Vector2( 1125.23, 654.76 )
scale = Vector2( 0.860158, 0.880135 )
texture = ExtResource( 9 )
hframes = 2

[node name="Standing" type="Sprite" parent="FirstPlayer4"]
position = Vector2( 1418.15, 655.509 )
scale = Vector2( 0.865152, 0.845175 )
texture = ExtResource( 7 )
hframes = 2

[node name="StartButton" parent="." instance=ExtResource( 5 )]
position = Vector2( -359.617, 226.531 )

[node name="Button" parent="StartButton" index="0"]
margin_left = 964.0
margin_top = 209.0
margin_right = 1102.0
margin_bottom = 351.0

[node name="Sprite" parent="StartButton/Button" index="0"]
position = Vector2( 71.5419, 63.5683 )
scale = Vector2( 0.467379, 0.475593 )
texture = ExtResource( 2 )

[node name="DifficultyButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 15.874, 226.998 )

[node name="Button" parent="DifficultyButton" index="0"]
margin_left = 381.471
margin_top = 3.63371
margin_right = 393.471
margin_bottom = 23.6337

[node name="Sprite" parent="DifficultyButton/Button" index="0"]
position = Vector2( 7.93799, 8.34796 )
scale = Vector2( 1e-05, 0.0133331 )
texture = ExtResource( 3 )

[node name="ExitButton" parent="." instance=ExtResource( 5 )]
position = Vector2( 391, 227 )

[node name="Button" parent="ExitButton" index="0"]
margin_left = 801.0
margin_top = 222.0
margin_right = 978.0
margin_bottom = 381.0

[node name="Sprite" parent="ExitButton/Button" index="0"]
position = Vector2( 83.7734, 55.0845 )
scale = Vector2( 0.507201, 0.520542 )

[node name="Designers" parent="." instance=ExtResource( 8 )]
margin_left = 399.03
margin_top = 770.963
margin_right = 836.03
margin_bottom = 808.963

[node name="Title" parent="." instance=ExtResource( 8 )]
margin_left = 502.997
margin_top = 167.576
margin_right = 1453.0
margin_bottom = 228.574
custom_fonts/font = ExtResource( 6 )
text = "Terrific Lights"
align = 1

[node name="ScoreDisplay" parent="." instance=ExtResource( 11 )]
margin_left = 858.047
margin_top = 470.804
margin_right = 1071.05
margin_bottom = 516.804

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -3.0
autoplay = true

[connection signal="visibility_changed" from="FirstPlayer/Walking" to="." method="_on_Standing_visibility_changed"]

[editable path="StartButton"]
[editable path="DifficultyButton"]
[editable path="ExitButton"]
